--- a/ERP/accounting/templates/accounting/base.html
+++ b/ERP/accounting/templates/accounting/base.html
@@ -13,6 +13,16 @@
         <nav class="sidebar bg-light">
             <div class="sidebar-sticky pt-3">
                 <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'accounting:voucher_entry_list' %}">
+                            Voucher List
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'accounting:voucher_entry_create' %}">
+                            New Voucher
+                        </a>
+                    </li>
                     {% comment %} <li class="nav-item">
                         <a class="nav-link" href="{% url 'accounting:general_journal' %}">
                             General Journal
