--- a/ERP/accounting/templates/accounting/chart_of_accounts_form.html
+++ b/ERP/accounting/templates/accounting/chart_of_accounts_form.html
@@ -283,13 +283,13 @@
                                 </button>
                             </legend>
                             <div id="udf-section" class="collapse show">
-                                <div id="dynamic-fields"
-                                     hx-get="{% url 'accounting:chart_of_accounts_form_fields' %}"
-                                     hx-trigger="change from:#id_is_bank_account, change from:#id_is_control_account"
-                                     hx-target="#dynamic-fields"
-                                     hx-swap="innerHTML">
-                                    {% include 'accounting/chart_of_accounts_form_fields.html' %}
-                                </div>
+                            <div id="dynamic-fields"
+                                 hx-get="{% url 'accounting:chart_of_accounts_form_fields' %}{% if form.instance.pk %}?instance_id={{ form.instance.pk }}{% endif %}"
+                                 hx-trigger="load, change from:#id_is_bank_account, change from:#id_is_control_account"
+                                 hx-target="#dynamic-fields"
+                                 hx-swap="innerHTML">
+                                <div class="text-muted">Loading custom fields…</div>
+                            </div>
                             </div>
                         </fieldset>
             <div class="d-flex justify-content-between align-items-center mt-4">
