--- a/ERP/accounting/templates/accounting/partials/journal_header_form.html
+++ b/ERP/accounting/templates/accounting/partials/journal_header_form.html
@@ -1,48 +1,78 @@
 {% load widget_tweaks %}
-<div class="card mb-3">
-    <div class="card-header">
-        <h5 class="card-title mb-0">Journal Header</h5>
+{% with f=journal_form|default:form %}
+<div class="row g-3">
+  {% if voucher_configs %}
+    <div class="col-md-3">
+      <label for="voucher-config-select" class="form-label">Voucher Config</label>
+      <select id="voucher-config-select" name="voucher_config" class="form-select">
+        {% for config in voucher_configs %}
+          <option value="{{ config.pk }}" {% if selected_config and config.pk == selected_config.pk %}selected{% endif %}>{{ config.name }}</option>
+        {% endfor %}
+      </select>
     </div>
-    <div class="card-body">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="mb-3">
-                    <label for="voucher-config-select" class="form-label">Voucher Config</label>
-                    <select id="voucher-config-select" name="voucher_config" class="form-select">
-                        {% for config in voucher_configs %}
-                            <option value="{{ config.pk }}" {% if config.pk == selected_config.pk %}selected{% endif %}>{{ config.name }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="mb-3">
-                    <label class="form-label d-block">{{ form.journal_type.label }}</label>
-                    <div class="journal-type-selection d-flex flex-wrap gap-2">
-                        {% for choice in form.journal_type %}
-                            <input type="radio" class="btn-check" name="{{ choice.name }}" id="{{ choice.id_for_label }}" value="{{ choice.value }}" autocomplete="off" {% if choice.data.selected %}checked{% endif %}>
-                            <label class="btn btn-outline-primary journal-type-card" for="{{ choice.id_for_label }}">
-                                {{ choice.choice_label }}
-                            </label>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="mb-3">
-                    <label for="id_date" class="form-label">{{ form.date.label }}</label>
-                    {% render_field form.date class="form-control" %}
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="mb-3">
-                    <label for="id_reference" class="form-label">{{ form.reference.label }}</label>
-                    {% render_field form.reference class="form-control" hx-post=url 'accounting:journal_validate' hx-include="#journal-form" hx-target="#validation-panel" hx-swap="innerHTML" %}
-                </div>
-            </div>
-        </div>
-        <div id="custom-fields-container">
-            {% include "accounting/partials/_custom_fields.html" %}
-        </div>
+  {% endif %}
+
+  {% if f.journal_type %}
+    <div class="col-md-4">
+      <label class="form-label d-block">{{ f.journal_type.label }}</label>
+      <div class="d-flex flex-wrap gap-2">
+        {% for choice in f.journal_type %}
+          <input type="radio" class="btn-check" name="{{ choice.name }}" id="{{ choice.id_for_label }}" value="{{ choice.choice_value }}" {% if choice.data.selected %}checked{% endif %}>
+          <label class="btn btn-outline-primary" for="{{ choice.id_for_label }}">
+            {{ choice.choice_label }}
+          </label>
+        {% endfor %}
+      </div>
     </div>
+  {% endif %}
+
+  {% if f.journal_date %}
+    <div class="col-md-3">
+      <label for="{{ f.journal_date.id_for_label }}" class="form-label">{{ f.journal_date.label }}</label>
+      {% render_field f.journal_date class+="form-control" %}
+    </div>
+  {% endif %}
+
+  {% if f.period %}
+    <div class="col-md-3">
+      <label for="{{ f.period.id_for_label }}" class="form-label">{{ f.period.label }}</label>
+      {% render_field f.period class+="form-select" %}
+    </div>
+  {% endif %}
+
+  {% if f.reference %}
+    <div class="col-md-3">
+      <label for="{{ f.reference.id_for_label }}" class="form-label">{{ f.reference.label }}</label>
+      {% render_field f.reference class+="form-control" %}
+    </div>
+  {% endif %}
+
+  {% if f.description %}
+    <div class="col-md-6">
+      <label for="{{ f.description.id_for_label }}" class="form-label">{{ f.description.label }}</label>
+      {% render_field f.description class+="form-control" rows="2" %}
+    </div>
+  {% endif %}
+
+  {% if f.currency_code %}
+    <div class="col-md-3">
+      <label for="{{ f.currency_code.id_for_label }}" class="form-label">{{ f.currency_code.label }}</label>
+      {% render_field f.currency_code class+="form-select" %}
+    </div>
+  {% endif %}
+
+  {% if f.exchange_rate %}
+    <div class="col-md-3">
+      <label for="{{ f.exchange_rate.id_for_label }}" class="form-label">{{ f.exchange_rate.label }}</label>
+      {% render_field f.exchange_rate class+="form-control" %}
+    </div>
+  {% endif %}
+
+  {% if f.status %}
+    <div class="col-md-3">
+      <label for="{{ f.status.id_for_label }}" class="form-label">{{ f.status.label }}</label>
+      {% render_field f.status class+="form-select" %}
+    </div>
+  {% endif %}
 </div>
+{% endwith %}
