--- a/ERP/accounting/templates/accounting/project_list.html
+++ b/ERP/accounting/templates/accounting/project_list.html
@@ -3,14 +3,26 @@
 
 {% block list_header %}
 <h4 class="card-title">Project</h4>
-<a href="{% url 'accounting:project_create' %}" class="btn btn-success mb-2">
+<div class="d-flex align-items-center gap-2 flex-wrap">
+  <a href="{% url 'accounting:project_create' %}" class="btn btn-success btn-sm">
     <i class="mdi mdi-plus me-1"></i> New Project
-</a>
+  </a>
+  <div class="input-group input-group-sm" style="width: 320px;">
+    <label class="input-group-text" for="bulk-action">Bulk</label>
+    <select id="bulk-action" name="action" class="form-select form-select-sm" form="bulk-action-form">
+      <option value="">Select action</option>
+      <option value="activate">Mark Active</option>
+      <option value="deactivate">Mark Inactive</option>
+    </select>
+    <button id="bulk-action-apply" type="submit" class="btn btn-outline-primary" form="bulk-action-form">Apply</button>
+  </div>
+</div>
 {% endblock %}
 
 {% block table_head %}
 <thead>
   <tr>
+    <th class="no-search no-export" style="width:30px;"><input type="checkbox" id="select-all" class="form-check-input form-check-sm"></th>
     <th>Code</th>
     <th>Name</th>
     <th>Description</th>
@@ -30,7 +42,8 @@
 {% block table_body %}
 <tbody>
   {% for p in projects %}
-  <tr>
+  <tr data-pk="{{ p.pk }}">
+    <td><input type="checkbox" class="form-check-input row-select" name="selected_ids" value="{{ p.pk }}" form="bulk-action-form"></td>
     <td>{{ p.code }}</td>
     <td>{{ p.name }}</td>
     <td>{{ p.description }}</td>
@@ -57,3 +70,51 @@
   {% endfor %}
 </tbody>
 {% endblock %}
+
+  {% block custom_filters %}
+  <form id="bulk-action-form" method="post">
+    {% csrf_token %}
+  </form>
+  {% endblock %}
+
+  {% block extra_js %}
+  <script id="datatable-config" type="application/json">
+  {
+    "columnDefs": [
+      {"targets": [0, -1], "orderable": false, "searchable": false}
+    ]
+  }
+  </script>
+  {{ block.super }}
+  <script>
+    $(function() {
+      var selectAll = $('#select-all');
+      var rowChecks = $('input.row-select');
+      var actionSelect = $('#bulk-action');
+      var applyBtn = $('#bulk-action-apply');
+
+      function syncSelectAll() {
+        var checkedCount = rowChecks.filter(':checked').length;
+        selectAll.prop('checked', checkedCount > 0 && checkedCount === rowChecks.length);
+      }
+
+      selectAll.on('change', function() {
+        rowChecks.prop('checked', $(this).is(':checked'));
+      });
+
+      rowChecks.on('change', syncSelectAll);
+
+      applyBtn.on('click', function(e) {
+        if (!actionSelect.val()) {
+          e.preventDefault();
+          alert('Choose a bulk action to apply.');
+          return;
+        }
+        if (!rowChecks.filter(':checked').length) {
+          e.preventDefault();
+          alert('Select at least one item.');
+        }
+      });
+    });
+  </script>
+  {% endblock %}
