--- a/ERP/accounting/templates/accounting/htmx/voucher_header_section.html
+++ b/ERP/accounting/templates/accounting/htmx/voucher_header_section.html
@@ -33,7 +33,7 @@
                     </label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="fas fa-calendar"></i></span>
-                        {{ header_form.journal_date|add_class:"form-control"|attr:"required" }}
+                        {{ header_form.journal_date }}
                     </div>
                     {% if header_form.journal_date.errors %}
                         <div class="invalid-feedback d-block">
