--- a/ERP/accounting/templates/accounting/vendor_list.html
+++ b/ERP/accounting/templates/accounting/vendor_list.html
@@ -2,9 +2,14 @@
 
 {% block title %}Vendors{% endblock %}
 
+<form id="bulk-action-form" method="post">
+    {% csrf_token %}
+</form>
+
 {% block table_head %}
 <thead>
     <tr>
+        <th class="no-search no-export" style="width: 30px;"><input type="checkbox" id="select-all" class="form-check-input form-check-sm"></th>
         <th>Code</th>
         <th>Name</th>
         <th data-default-visible="false">Legal Name</th>
@@ -33,6 +38,7 @@
 <tbody>
     {% for vendor in vendors %}
     <tr>
+        <td><input type="checkbox" class="form-check-input row-select" name="selected_ids" value="{{ vendor.pk }}" form="bulk-action-form"></td>
         <td>{{ vendor.code }}</td>
         <td>{{ vendor.display_name }}</td>
         <td data-searchable="true">{{ vendor.legal_name }}</td>
@@ -61,7 +67,63 @@
 {% endblock table_body %}
 
 {% block create_button %}
-<a href="{% url 'accounting:vendor_create' %}" class="btn btn-success btn-sm ms-2">
-    <i class="mdi mdi-plus me-1"></i> New Vendor
-</a>
+<div class="d-flex align-items-center gap-2 flex-wrap">
+    <a href="{% url 'accounting:vendor_create' %}" class="btn btn-success btn-sm ms-2">
+        <i class="mdi mdi-plus me-1"></i> New Vendor
+    </a>
+    <div class="input-group input-group-sm" style="width: 320px;">
+        <label class="input-group-text" for="bulk-action">Bulk</label>
+        <select id="bulk-action" name="action" class="form-select form-select-sm" form="bulk-action-form">
+            <option value="">Select action</option>
+            <option value="activate">Mark Active</option>
+            <option value="deactivate">Mark Inactive</option>
+            <option value="hold">Put On Hold</option>
+            <option value="unhold">Remove Hold</option>
+        </select>
+        <button id="bulk-action-apply" type="submit" class="btn btn-outline-primary" form="bulk-action-form">Apply</button>
+    </div>
+</div>
+{% endblock %}
+
+{% block extra_js %}
+<script id="datatable-config" type="application/json">
+{
+    "columnDefs": [
+        {"targets": [0, -1], "orderable": false, "searchable": false}
+    ],
+    "order": [[1, "asc"]]
+}
+</script>
+{{ block.super }}
+<script>
+    $(function() {
+        var selectAll = $('#select-all');
+        var rowChecks = $('input.row-select');
+        var actionSelect = $('#bulk-action');
+        var applyBtn = $('#bulk-action-apply');
+
+        function syncSelectAll() {
+            var checkedCount = rowChecks.filter(':checked').length;
+            selectAll.prop('checked', checkedCount > 0 && checkedCount === rowChecks.length);
+        }
+
+        selectAll.on('change', function() {
+            rowChecks.prop('checked', $(this).is(':checked'));
+        });
+
+        rowChecks.on('change', syncSelectAll);
+
+        applyBtn.on('click', function(e) {
+            if (!actionSelect.val()) {
+                e.preventDefault();
+                alert('Choose a bulk action to apply.');
+                return;
+            }
+            if (!rowChecks.filter(':checked').length) {
+                e.preventDefault();
+                alert('Select at least one vendor.');
+            }
+        });
+    });
+</script>
 {% endblock %}
